--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -53,3 +53,12 @@
   </div>
 
 </footer>
+<script type="text/javascript" src="{{ site.baseurl }}/js/jquery.min.js"></script>
+    <script src="{{ site.baseurl }}/js/jquery.nicescroll.min.js"></script>
+    <script src="{{ site.baseurl }}/js/jquery.nicescroll.plus.js"></script>
+    <script src="{{ site.baseurl }}/js/velocity.min.js"></script>
+    <script src="{{ site.baseurl }}/js/skrollr.min.js"></script>
+    <script src="{{ site.baseurl }}/js/jquery.scrolline.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/js/modernizr.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/js/materialize.min.js"></script>
+    <script type="text/javascript" src="{{ site.baseurl }}/js/main.js"></script>
