--- a/css/main.scss
+++ b/css/main.scss
@@ -49,7 +49,7 @@ $on-laptop:        800px;
         "base",
         "layout",
         "syntax-highlighting",
-        "materialize"
+        "angular-material",
+        "custom"
 ;
-
 
