inserted sility to jekyll

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,11 +1,22 @@
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+ 
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="keywords" content="Javascript Developer, Angular JS Developer, Linux Systems Engineer, 3yrs Experience, PHP developer, Laravel Developer, Backend Developer, ">
+    <meta name="author" content="Ravi Teja Gangineni [rteja91]"> 
+    <meta property="og:title" content="Ravi Teja Gangineni - Full Stack Developer"/>
+    <meta property="og:description" content="Ravi Teja Gangineni is a full stack developer having experience on Frontend Development with Javascript, Jquery, Angular Js. Backend Development with PHP Frameworks like Slim (REST Micro Framework), Laravel, Magento, Wordpress Etc.," />
+    <meta property="og:url" content="http://raviteja.gangineni.com" />
+    <meta property="og:site_name" content="Experience of full stack developer"/>
+    <meta property="og:image" content="http://raviteja.gangineni.com/ogp.jpg" />
 
-  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
-  <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-   <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:400,500,700,400italic'>
+
+  <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>  
+ 	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+  <link href="{{ "/font/material-design-iconic-font/css/material-design-iconic-font.min.css" | prepend: site.url }}" rel="stylesheet">
+  <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="{{ "/font/ionicons/css/ionicons.min.css" | prepend: site.url }}" rel="stylesheet">
   <link rel="stylesheet" href="{{ "/css/main.css" | prepend: site.url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "/feed.xml" | prepend: site.baseurl | prepend: site.url }}" />
