--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,44 +1,87 @@
-<md-toolbar class="header">
-
-      <div class="md-toolbar-tools docs-toolbar-tools" ng-click="openMenu()" tabindex="-1" role="button">
-        <button class="md-icon-button md-button md-ink-ripple hide-gt-sm" ng-transclude="" aria-label="Toggle Menu">
-          <md-icon md-svg-src="img/icons/ic_menu_24px.svg" class="ng-scope ng-isolate-scope" aria-hidden="true"><svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="100%" height="100%" viewBox="0 0 24 24" enable-background="new 0 0 24 24" xml:space="preserve" fit="" preserveAspectRatio="xMidYMid meet" style="pointer-events: none; display: block;">
-<g id="Header">
-    <g>
-        <rect x="-618" y="-2232" fill="none" width="1400" height="3600"></rect>
-    </g>
-</g>
-<g id="Label">
-</g>
-<g id="Icon">
-    <g>
-        <rect fill="none" width="24" height="24"></rect>
-        <path d="M3,18h18v-2H3V18z M3,13h18v-2H3V13z M3,6v2h18V6H3z"></path>
-    </g>
-</g>
-<g id="Grid" display="none">
-    <g display="inline">
-    </g>
-</g>
-</svg></md-icon>
-        </button>
-        <div class="fill-height layout-row flex">
-          <h2 class="md-toolbar-item md-breadcrumb md-headline">
-            <!-- ngIf: menu.currentPage.name !== menu.currentSection.name -->
-            <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
-          </h2>
-
-          <span class="flex"> </span> <!-- use up the empty space -->
-
-          <div class="md-toolbar-item docs-tools layout-row">
-			{% for page in site.pages %}
-			{% if page.title %}
-			<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-			{% endif %}
-			{% endfor %}
-         
-          </div>
+    <!-- Header -->
+    <header class="header">
+        <div class="top clearfix">
+            <a href="/contact/" class="available"><i class="ion-ios-email-outline"></i><span>Available For Freelance</span></a>
+            <div class="right-icons">
+                <a href="#" class="open-search header-open-search"><i class="md md-search"></i></a>
+                <a href="#" class="download"><i class="md md-file-download"></i></a>
+                <a href="#" class="share"><i class="md md-more-vert"></i></a>
+            </div>
+            <!-- end .right-icons -->
+            <!-- Popup -->
+            <div class="popup">
+                <nav class="social-nav">
+                    <ul class="list-unstyled">
+                        <li><a href="#">Facebook</a>
+                        </li>
+                        <li><a href="#">Twitter</a>
+                        </li>
+                        <li><a href="#">Linkedin</a>
+                        </li>
+                        <li><a href="#">Google+</a>
+                        </li>
+                        <li><a href="#">Behance</a>
+                        </li>
+                    </ul>
+                    <!-- end .list-unstyled -->
+                </nav>
+                <!-- end .social-nav -->
+            </div>
+            <!-- end .popup -->
         </div>
-      </div>
+        <!-- end .top -->
+        <div class="bottom clearfix">
+            <div class="title"><a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+            </div>
+            <div class="header-action-button-wrapper">
+                <a href="#" class="header-action-button action-button"><i class="md md-add"></i></a>
+            </div>
+            <!-- end .header-action-button-wrapper -->
+            <a href="#" class="responsive-menu-open">Menu <i class="fa fa-bars"></i></a>
+            <nav class="main-nav">
+                <ul class="list-unstyled">
+                    <!-- <li class="active"><a href="#section1">Home</a>
+                    </li>
+                    <li><a href="#section2">About</a>
+                    </li>
+                    <li><a href="#section3">Skill</a>
+                    </li>
+                    <li><a href="#section4">Experience</a>
+                    </li>
+                    <li><a href="#section5">Education</a>
+                    </li>
+                    <li><a href="#section6">Work</a>
+                    </li>
+                    <li><a href="#section7">Blog</a>
+                    </li>
+                    <li><a href="#section8">Contact</a>
+                    </li> -->
+                    {% for page in site.pages %}
+				{% if page.title %}
+				<li><a  href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a></li>
+				{% endif %}
+				{% endfor %}
+                </ul>
+            </nav>
+            <!-- end .main-nav -->
+        </div>
+        <!-- end .bottom -->
+    </header>
+    <!-- end .header -->
+    <div class="responsive-menu">
+        <a href="#" class="responsive-menu-close">Close <i class="ion-android-close"></i></a>
+        <nav class="responsive-nav"></nav>
+        <!-- end .responsive-nav -->
+    </div>
+    <!-- end .responsive-menu -->
 
-    </md-toolbar>
+    <!-- Section Navigation -->
+    <!-- <div class="section-nav">
+        <nav class="section1">
+            <a href="#section2" class="forward"><i class="md md-chevron-right"></i></a>
+            <a href="#section1" class="backward"><i class="md md-chevron-left"></i></a>
+        </nav>
+    </div> -->
+    <!-- end .section-nav -->
+    <div class="sections">
+        <div class="sections-wrapper clearfix">
