--- a/css/main.scss
+++ b/css/main.scss
@@ -49,7 +49,9 @@ $on-laptop:        800px;
         "base",
         "layout",
         "syntax-highlighting",
-        "angular-material",
-        "custom"
+        "bootstrap-min",
+        "owl-carousel",
+        "owl-theme-default",
+        "color"
 ;
 
