--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,6 +10,7 @@
     <meta property="og:url" content="http://raviteja.gangineni.com" />
     <meta property="og:site_name" content="Experience of full stack developer"/>
     <meta property="og:image" content="http://raviteja.gangineni.com/ogp.jpg" />
+    <meta name="google-site-verification" content="h4sC1JJRbY5Hq8DF4M1kGh3fMgj5-yuLEUOMFJvWp00" />
 
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>  
