new Design Implementation started

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,7 +27,7 @@
                     <!-- end .col-sm-4 -->
                     <div class="col-sm-4">
                         <h4>Contact</h4>
-                        <p>Tel: +91 949-219-5525 <br/>
+                        <p>Tel: +1 123456789 <br/>
                        	Email: <a href="mailto:{{ site.email }}" style="color: #fff">{{ site.email }}</a></p>
                     </div>
                     <!-- end .col-sm-4 -->
@@ -37,16 +37,12 @@
             <!-- end .container -->
         </div>
         <!-- end .footer -->
-        <div class="bottom">Copyright &copy; Ravi Teja Gangineni. All Rights Reserved.</div>
+        <div class="bottom">Copyright &copy; Sility All Rights Reserved.</div>
         <div class="bottom">Powered by Jekyll, Github, Sility Design </div>
         <!-- end .bottom -->
     </footer>
     <!-- end .footer -->
-<!--  <script src="{{ "/js/angular.min.js" | prepend: site.url }}"></script>
- <script src="{{ "/js/angular-animate.min.js" | prepend: site.url }}"></script>
- <script src="{{ "/js/angular-aria.min.js" | prepend: site.url }}"></script>
- <script src="{{ "/js/angular-material.min.js" | prepend: site.url }}"></script>
- <script src="{{ "/js/main.js" | prepend: site.url }}"></script> -->
+
   <!-- jQuery -->
     <script src="{{ "/js/jquery-1.11.2.min.js" | prepend: site.url }}"></script>
     <!-- Bootstrap -->
@@ -68,6 +64,16 @@
     <!-- Scripts.js -->
     <script src="{{ "/js/scripts.js" | prepend: site.url }}"></script>
  <!-- Piwik -->
+ <script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-47898487-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
 <script type="text/javascript">
   var _paq = _paq || [];
   _paq.push(['trackPageView']);
