--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,14 +3,13 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="keywords" content="Javascript Developer, Angular JS Developer, Linux Systems Engineer, 3yrs Experience, PHP developer, Laravel Developer, Backend Developer, ">
-    <meta name="author" content="Ravi Teja Gangineni [rteja91]"> 
-    <meta property="og:title" content="Ravi Teja Gangineni - Full Stack Developer"/>
-    <meta property="og:description" content="Ravi Teja Gangineni is a full stack developer having experience on Frontend Development with Javascript, Jquery, Angular Js. Backend Development with PHP Frameworks like Slim (REST Micro Framework), Laravel, Magento, Wordpress Etc.," />
+    <meta name="keywords" content="">
+    <meta name="author" content="Sility "> 
+    <meta property="og:title" content="Sility - Material Design Vcard & CV HTML Template"/>
+    <meta property="og:description" content="minimal html cv resume template,signature resume cv portfolio html template" />
     <meta property="og:url" content="http://raviteja.gangineni.com" />
-    <meta property="og:site_name" content="Experience of full stack developer"/>
+    <meta property="og:site_name" content="Sility - Material Design Vcard & CV HTML Template"/>
     <meta property="og:image" content="http://raviteja.gangineni.com/ogp.jpg" />
-    <meta name="google-site-verification" content="h4sC1JJRbY5Hq8DF4M1kGh3fMgj5-yuLEUOMFJvWp00" />
 
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>  
