--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,4 +1,4 @@
-            <!-- Home -->
+           <!-- Home -->
             <section id="section1" class="no-padding-bottom active">
                 <div class="container">
                     <div class="row">
@@ -10,7 +10,7 @@
                         </div>
                         <!-- end .col-sm-7 -->
                         <div class="col-sm-5 vertical-center">
-                            <img src="images/man01.png" alt="man" class="img-responsive section-img">
+                            <img src="{{ site.url }}/images/man01.png" alt="man" class="img-responsive section-img">
                         </div>
                         <!-- end .col-sm-5 -->
                     </div>
