Home Page Corrections

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,18 +16,19 @@
                     <div class="col-sm-4">
                         <h4>Connect</h4>
                         <div class="social-icons">
-                            <a href="#" class="social-icon"><i class="fa fa-facebook"></i></a>
-                            <a href="#" class="social-icon"><i class="fa fa-twitter"></i></a>
-                            <a href="#" class="social-icon"><i class="fa fa-google-plus"></i></a>
-                            <a href="#" class="social-icon"><i class="fa fa-behance"></i></a>
-                            <a href="#" class="social-icon"><i class="fa fa-dribbble"></i></a>
+                            <a href="https://www.facebook.com/rteja91" class="social-icon"><i class="fa fa-facebook"></i></a>
+                            <a href="https://twitter.com/rteja91" class="social-icon"><i class="fa fa-twitter"></i></a>
+                            <a href="https://in.linkedin.com/in/gangineniraviteja" class="social-icon"><i class="fa fa-linkedin"></i></a>
+                            <a href="https://plus.google.com/u/0/+RaviTejaGangineni" class="social-icon"><i class="fa fa-google-plus"></i></a>
+<!--                             <a href="#" class="social-icon"><i class="fa fa-behance"></i></a>
+                            <a href="#" class="social-icon"><i class="fa fa-dribbble"></i></a> -->
                         </div>
                         <!-- end .social-icons -->
                     </div>
                     <!-- end .col-sm-4 -->
                     <div class="col-sm-4">
                         <h4>Contact</h4>
-                        <p>Tel: +1 123456789 <br/>
+                        <p><br/>
                        	Email: <a href="mailto:{{ site.email }}" style="color: #fff">{{ site.email }}</a></p>
                     </div>
                     <!-- end .col-sm-4 -->
@@ -37,7 +38,7 @@
             <!-- end .container -->
         </div>
         <!-- end .footer -->
-        <div class="bottom">Copyright &copy; Sility All Rights Reserved.</div>
+        <div class="bottom">Copyright &copy; Ravi Teja Gangineni All Rights Reserved.</div>
         <div class="bottom">Powered by Jekyll, Github, Sility Design </div>
         <!-- end .bottom -->
     </footer>
