--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,12 +4,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="keywords" content="">
-    <meta name="author" content="Sility "> 
-    <meta property="og:title" content="Sility - Material Design Vcard & CV HTML Template"/>
-    <meta property="og:description" content="minimal html cv resume template,signature resume cv portfolio html template" />
+    <meta name="author" content="Ravi Teja Gangineni "> 
+    <meta property="og:title" content="Portfolio of Ravi Teja Gangineni"/>
+    <meta property="og:description" content="Ravi Teja Gangineni is a full stack developer having experience on Frontend Development with Javascript, Jquery, Angularjs. 
+  Backend Development with PHP Frameworks like Slim (REST Micro Framework), Laravel, Magento, Wordpress." />
     <meta property="og:url" content="http://raviteja.gangineni.com" />
-    <meta property="og:site_name" content="Sility - Material Design Vcard & CV HTML Template"/>
-    <meta property="og:image" content="http://raviteja.gangineni.com/ogp.jpg" />
+    <meta property="og:site_name" content="Ravi Teja Gangineni"/>
+    <meta property="og:image" content="http://raviteja.gangineni.com/images/ogp.jpg" />
 
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>  
