--- a/_includes/home.html
+++ b/_includes/home.html
@@ -3,14 +3,14 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-sm-7 vertical-center padding-fix">
-                            <h1>Design<sup>+</sup> Develope<sup>+</sup> Interactive<sup>+</sup> Art<sup>+</sup></h1>
-                            <p>Hello, I’m Benjamin Thomson. I Have 8 years of experience in Web and UX design. I am worked on a variety of brands and with agencies both big and small.</p>
-                            <p class="button-row"><a href="#" class="button solid-button white">Hire Me Now</a><a href="#" class="button solid-button purple">Download CV</a>
+                            <h1>Code<sup>+</sup> Design<sup>+</sup>FrontEnd<sup>+</sup> Backend<sup>+</sup></h1>
+                            <p>Hello, I’m Ravi Teja Gangineni. I Have 4 years of experience in Full Stack web development. </p>
+                            <p class="button-row"><!-- <a href="#" class="button solid-button white">Hire Me Now</a> --><a href="http://1drv.ms/1Zh0a3D" target="_blank" class="button solid-button purple">Download CV</a>
                             </p>
                         </div>
                         <!-- end .col-sm-7 -->
                         <div class="col-sm-5 vertical-center">
-                            <img src="{{ site.url }}/images/man01.png" alt="man" class="img-responsive section-img">
+                            <img src="{{ site.url }}/images/front-end-vs-back-end.jpg" alt="man" class="img-responsive section-img">
                         </div>
                         <!-- end .col-sm-5 -->
                     </div>
