--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,7 @@
 
   <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>  
  	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+ 	<link rel="icon" href="{{favicon.ico | prepend : site.url}}" type="image/x-icon" sizes="64x64">
   <link href="{{ "/font/material-design-iconic-font/css/material-design-iconic-font.min.css" | prepend: site.url }}" rel="stylesheet">
   <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   <link href="{{ "/font/ionicons/css/ionicons.min.css" | prepend: site.url }}" rel="stylesheet">
