--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,9 +11,9 @@ layout: default
 									<span class="date">{{ page.date | date: "%b %-d, %Y" }}</span>
 									<h4>{{ page.title }}</h4>
 									<span class="meta"><!-- <a href="#">7 Comments</a> |  --><a href="#">By {% if page.author %} {{ page.author }}{% endif %}</a></span>
-									<div class="footer">
+									<!-- <div class="footer">
 										<p class="button-row blog-button-row"><a href="#" class="button solid-button dark">Prev</a><a href="#" class="button solid-button purple">Next</a></p>
-									</div>
+									</div> -->
 								</div> <!-- end .content -->
 								<div class="image" style="background-image: url('{{ site.url }}{% if page.blogimage %}{{page.blogimage}}{%endif%}');"></div>
 							</header> <!-- end .blog-header -->
@@ -30,7 +30,7 @@ layout: default
 										<p>{%if page.authorinfo %}{{page.authorinfo}}{%endif%}</p>
 									</div>
 								</div> <!-- end .section -->
-								<div class="section">
+								<!-- <div class="section">
 									<h5>Share Post</h5>
 									<div class="social-icons">
 										<a href="#" class="social-icon"><i class="fa fa-facebook"></i></a>
@@ -38,12 +38,12 @@ layout: default
 										<a href="#" class="social-icon"><i class="fa fa-google-plus"></i></a>
 										<a href="#" class="social-icon"><i class="fa fa-behance"></i></a>
 										<a href="#" class="social-icon"><i class="fa fa-dribbble"></i></a>
-									</div> <!-- end .social-icons -->
-								</div> <!-- end .section -->
-								<div class="section">
+									</div> end .social-icons
+								</div> end .section -->
+								<!-- <div class="section">
 									<h5>Tags</h5>
 									<div class="tags"><a href="#">Music</a><span>|</span><a href="#">Mobile</a><span>|</span><a href="#">Tablet</a><span>|</span><a href="#">Live</a></div>
-								</div> <!-- end .section -->
+								</div> end .section -->
 							</div> <!-- end .blog-details -->
 						</div> <!-- end .single-blog-post -->
 					</div> <!-- end .container -->
