updated work and slide out

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
     <!-- Header -->
     <header class="header">
         <div class="top clearfix">
-            <a href="{{ site.url }}/contact/" class="available"><i class="ion-ios-email-outline"></i><span>Available For Freelance</span></a>
+            <a href="{{ site.url }}/contact/" class="available"><i class="ion-ios-email-outline"></i><span>Contact for Tech Consultation</span></a>
             <div class="right-icons">
                 <a href="#" class="open-search header-open-search"><i class="md md-search"></i></a>
                 <a href="#" class="download"><i class="md md-file-download"></i></a>
