--- a/_includes/slideout.html
+++ b/_includes/slideout.html
@@ -45,20 +45,20 @@
                 <!-- end .social-nav -->
             </div>
             <!-- end .slide-out-popup -->
-            <div class="image"><img src="{{ site.url }}/images/head01.png" alt="alt text" class="img-responsive">
+            <div class="image"><img src="{{ site.url }}/images/author.png" alt="alt text" class="img-responsive">
             </div>
             <div class="content">
-                <h5>Benjamin Thomson</h5>
-                <span>Web & UX Designer</span>
+                <h5>Ravi Teja Gangineni</h5>
+                <span>Full Stack Web Developer</span>
             </div>
             <!-- end .content -->
             <div class="text-right">
-                <a href="#" class="button link-button white icon-left"><i class="md md-file-download"></i>Download Resume</a>
+                <a href="http://1drv.ms/1Zh0a3D" class="button link-button white icon-left"><i class="md md-file-download"></i>Download Resume</a>
             </div>
             <!-- end .text-right -->
         </header>
         <!-- end .slide-out-header -->
-        <div class="slide-out-widgets">
+        <!-- <div class="slide-out-widgets">
             <div class="slide-out-widget">
                 <h4>Drink A Coffee With Me Today</h4>
                 <form action="#" method="post" class="form-horizontal contact-form">
@@ -67,32 +67,32 @@
                         <div class="col-sm-9">
                             <input type="text" class="contact-name" name="contact-name" />
                         </div>
-                        <!-- end .col-sm-9 -->
+                        end .col-sm-9
                     </div>
-                    <!-- end .form-group -->
+                    end .form-group
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Email</label>
                         <div class="col-sm-9">
                             <input type="email" class="contact-email" name="contact-email" />
                         </div>
-                        <!-- end .col-sm-9 -->
+                        end .col-sm-9
                     </div>
-                    <!-- end .form-group -->
+                    end .form-group
                     <div class="form-group">
                         <label class="col-sm-3 control-label">Message</label>
                         <div class="col-sm-9">
                             <textarea name="contact-message" class="contact-message" rows="3"></textarea>
                         </div>
-                        <!-- end .col-sm-9 -->
+                        end .col-sm-9
                     </div>
-                    <!-- end .form-group -->
+                    end .form-group
                     <div class="form-group">
                         <div class="col-sm-9 col-sm-offset-3">
                             <button type="submit" class="button solid-button purple">Send Message</button>
                         </div>
-                        <!-- end .col-sm-9 -->
+                        end .col-sm-9
                     </div>
-                    <!-- end .form-group -->
+                    end .form-group
                     <div class="contact-loading alert alert-info form-alert">
                         <span class="message">Loading...</span>
                         <button type="button" class="close" data-hide="alert" aria-label="Close"><i class="fa fa-times"></i>
@@ -109,9 +109,9 @@
                         </button>
                     </div>
                 </form>
-                <!-- end contact-form -->
+                end contact-form
             </div>
-            <!-- end .slide-out-widget -->
+            end .slide-out-widget
             <div class="slide-out-widget">
                 <h4>Follow On Instagram</h4>
                 <div class="instagram">
@@ -127,7 +127,7 @@
                     </a>
                     <a href="#"><img src="{{ site.url }}/images/instagram06.jpg" alt="alt text" class="img-responsive">
                     </a>
-                </div>
+                </div> -->
                 <!-- end .instagram -->
             </div>
             <!-- end .slide-out-widget -->
