--- a/css/main.scss
+++ b/css/main.scss
@@ -46,8 +46,92 @@ $on-laptop:        800px;
 
 
 // Import partials from `sass_dir` (defaults to `_sass`)
-@import
-        "base",
-        "layout",
-        "syntax-highlighting"
-;
+//@import
+//        "base",
+//        "layout",
+//        "syntax-highlighting"
+//;
+
+/*! =========================================================
+ *
+ * Material Kit PRO - V1.0.0
+ *
+ * =========================================================
+ *
+ * Copyright 2016 Creative Code Srl
+ * Available with purchase of license from http://www.creative-tim.com/product/material-kit-pro
+ *
+ * ========================================================= */
+
+@import 'material-kit/variables';
+@import 'material-kit/mixins';
+@import 'material-kit/shadows';
+@import 'material-kit/misc';
+
+// core sass
+@import 'material-kit/form';
+@import 'material-kit/buttons';
+@import 'material-kit/checkboxes';
+@import 'material-kit/togglebutton';
+@import 'material-kit/radios';
+@import 'material-kit/inputs';
+@import 'material-kit/pagination';
+@import 'material-kit/labels';
+@import 'material-kit/pills';
+
+@import 'material-kit/navbar';
+@import 'material-kit/dropdown';
+@import 'material-kit/alerts';
+@import 'material-kit/progress';
+@import 'material-kit/typography';
+@import 'material-kit/tabs';
+@import 'material-kit/popups';
+@import 'material-kit/carousel';
+@import 'material-kit/cards';
+@import 'material-kit/dialogs';
+@import 'material-kit/panels';
+@import 'material-kit/dividers';
+
+@import 'material-kit/images';
+@import 'material-kit/media';
+@import 'material-kit/info-areas';
+@import 'material-kit/tables';
+@import 'material-kit/select';
+@import 'material-kit/tags';
+@import 'material-kit/fileupload';
+@import 'material-kit/flexisel';
+
+
+@import 'material-kit/sections';
+
+// External plugins
+@import 'material-kit/plugins/_plugin-nouislider';
+@import 'material-kit/plugins/_plugin-selectize';
+@import 'material-kit/plugins/_plugin-datepicker';
+
+@import 'material-kit/ripples';
+@import 'material-kit/example-pages';
+
+@import 'material-kit/responsive';
+
+.typed-cursor{
+    opacity: 1;
+    -webkit-animation: blink 0.7s infinite;
+    -moz-animation: blink 0.7s infinite;
+    animation: blink 0.7s infinite;
+}
+@keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-webkit-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
+@-moz-keyframes blink{
+    0% { opacity:1; }
+    50% { opacity:0; }
+    100% { opacity:1; }
+}
