--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,38 +1,66 @@
-<footer class="site-footer">
+<footer class="footer footer-white">
+  <div class="container">
+    <a class="footer-brand" href="{{ site.baseurl }}/">{{ site.title }}</a>
 
-  <div class="wrapper">
+    <ul class="pull-center">
+      <li>
+        <a href="{{ site.baseurl }}/#KnowAboutme">
+          <i class="material-icons">account_circle</i> About me
+        </a>
+      </li>
+      <li>
+        <a href="{{ site.baseurl }}/#projects">
+          <i class="material-icons">apps</i> Portfolio
+        </a>
+      </li>
+      <li>
+        <a href="{{ site.baseurl }}/#BlogPosts">
+          <i class="material-icons">view_quilt</i> Journey
+        </a>
+      </li>
+      <li>
+        <a href="{{ site.baseurl }}/#ContactMyBot">
+          <i class="material-icons">chat_bubble</i> Contact Me
+        </a>
+      </li>
+    </ul>
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description }}</p>
-      </div>
+    <ul class="social-buttons pull-right">
+      <li>
+        <a href="https://twitter.com/rteja91" target="_blank" class="btn btn-just-icon btn-simple btn-twitter">
+          <i class="fa fa-twitter"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://in.linkedin.com/in/gangineniraviteja" target="_blank" class="btn btn-just-icon btn-simple btn-linkedin">
+          <i class="fa fa-linkedin"></i>
+        </a>
+      </li>
+      <li>
+        <a href="https://in.linkedin.com/in/gangineniraviteja" target="_blank" class="btn btn-just-icon btn-simple btn-github">
+          <i class="fa fa-github"></i>
+        </a>
+      </li>
+    </ul>
+  <div class="row">
+    <div class="col-lg-12">
+      <h5 class="title">{{site.description}}</h5>
     </div>
-
+  </div>
   </div>
 
+      <div class="col-lg-12" style="background: #222; color: #ffffff; padding: 25px 0px;">
+        <ul class="pull-center">
+          <li><strong>Disclaimer:</strong> I don't claim any copyrights, All content here is orchestrated from Web
+            resources.
+          </li>
+          <li>If any one have issues please drop a mail to</li>
+          <li><a href="mailto:{{ site.email }}"><i class="fa fa-envelope"></i> {{ site.email }}</a></li>
+          <li>I will remove them from these pages and repos I have.</li>
+          <li>This site is powered by <strong>jekyll</strong> and hosted on <strong><i class="fa fa-github"></i>
+            github </strong></li>
+        </ul>
+      </div>
+
 </footer>
+
