--- a/css/main.scss
+++ b/css/main.scss
@@ -113,6 +113,9 @@ $on-laptop:        800px;
 @import 'material-kit/example-pages';
 
 @import 'material-kit/responsive';
+@import "education";
+@import "experience";
+@import "skills";
 
 .typed-cursor{
     opacity: 1;
