--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -10,6 +10,7 @@
 <script type="text/javascript" src='{{ "/js/modernizr.js" | prepend: site.baseurl }}' ></script>
 <script type="text/javascript" src='{{ "/js/vertical-nav.js" | prepend: site.baseurl }}' ></script>
 <script type="text/javascript" src='{{ "/js/typed.js" | prepend: site.baseurl }}' ></script>
+<script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-52402a5b3e1d8b22"></script> 
 <script type="text/javascript">
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
